welcome.lessons.welcome.bat.bool2.DateFashion.scala.error
dateFashion:3: error: 'case' expected but '(' found.
		(x,_) if (x<=2)		=> return 0
                ^dateFashion:4: error: '}' expected but ';' found.
		(_,y) if (y<=2)		=> return 0
^dateFashion:4: error: ';' expected but 'if' found.
		(_,y) if (y<=2)		=> return 0
                      ^dateFashion:5: error: ';' expected but 'if' found.
		(x,y) if (x>=8 || y>=8)	=> return 2
                      ^dateFashion:9: error: eof expected but '}' found.
 }
 ^