welcome.lessons.welcome.bat.bool2.DateFashion.scala.code
def dateFashion(you:Int, date:Int):Int = {
	(you,date) match {
		(x,_) if (x<=2)		=> return 0
		(_,y) if (y<=2)		=> return 0
		(x,y) if (x>=8 || y>=8)	=> return 2
		(_,_)				=> return 1
	}
}